--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - POSTGRES_USER=fastapi_user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=fastapi_database
+    networks:
+      - fastapi_network
 
   app:
     container_name: app
@@ -23,4 +25,10 @@ services:
       - 8000:8000
     depends_on:
       - db
+    networks:
+      - fastapi_network
     restart: always
+
+networks:
+  fastapi_network:
+    
